# inferno

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CUDA_IMPLEMENTATION.md  CURRENT_STATUS.md  Cargo.toml  Cargo.toml.debug  GPT2_FIXES_SUMMARY.md  IMPLEMENTATION_STATUS.md  MODEL_LOADING_TEST_PLAN.md  PROJECT1_DOCTOR_COMMAND_TODO.md  PROJECT2_NVIDIA_INFERENCE_TODO.md  PROJECT3_DOCKER_E2E_TESTING_TODO.md  README.md  REPETITION_BUG_FIX.md  XET_IMPLEMENTATION_CHECKLIST.md  XET_INTEGRATION_RATIONALE.md  alice-todo.md  benchmark.json  check_tensors.rs  check_tensors.toml  clippy.toml  coverage.txt  debug_safetensors.rs  implementation.md  llama-todo.md  mistral-analysis.md  oss-implementation-plan.md  own-llama.md  plan.md  rustfmt.toml  test_inference.rs  todo.md
benchmarking/: Cargo.toml  build.rs  check-performance.sh
benchmarking/benches/: concurrency.rs  config.rs  error.rs  memory.rs  metrics.rs  proxy_service.rs  scalability.rs  service_discovery.rs
benchmarking/src/: lib.rs
crates/backend/: Cargo.toml
crates/backend/src/: cli_options.rs  config.rs  health.rs  inference.rs  lib.rs  main.rs  registration.rs
crates/backend/tests/: config_tests.rs  inference_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli_options.rs  commands.rs  doctor.rs  lib.rs  main.rs  model_downloader.rs  models.rs  play.rs  xet_tests.rs
crates/cli/tests/: doctor_tests.rs  test_memory_override_integration.rs
crates/cuda-profiler/: Cargo.toml
crates/cuda-profiler/src/: cuda_events.rs  lib.rs
crates/governator/: Cargo.toml
crates/governator/src/: cli_options.rs  config.rs  cost_analysis.rs  decision_engine.rs  lib.rs  main.rs  storage.rs
crates/governator/tests/: config_tests.rs  cost_analysis_tests.rs  decision_engine_tests.rs  storage_tests.rs
crates/inference/: Cargo.toml  PGO_BENCHMARKS.md  WEIGHT_LOADING_STATUS.md  build.rs
crates/inference/benches/: build-pgo-concurrent.sh  inference_benchmark.rs  pgo_benches.rs
crates/inference/examples/: README.md  concurrent_inference.rs  cuda_inference_poc.rs  debug_gpt2.rs  inspect_gpt2.rs  inspect_safetensors.rs  simple_inference.rs  test_gpt2_direct.rs  test_gpt_oss_structure.rs  test_openai_cuda.rs  test_repeat.rs
crates/inference/pgo-benchmarks/: Cargo.toml  README.md  build-pgo-concurrent.sh  build.rs
crates/inference/pgo-benchmarks/benches/: pgo_benches.rs
crates/inference/pgo-benchmarks/src/: main.rs
crates/inference/src/: config.rs  error.rs  health.rs  lib.rs  main.rs  server.rs  service.rs  tokenizer_tests.rs
crates/inference/src/engine/: mod.rs
crates/inference/src/ffi/: safety.rs
crates/inference/src/inference/: burn_engine.rs  burn_engine_simple.rs  burn_hello_world.rs  candle_engine.rs  mod.rs  (+5 more)
crates/inference/tests/: burn_clean_demo.rs  burn_engine_fix_test.rs  burn_proper_inference.rs  cuda_backend_test.rs  cuda_inference_test.rs  cuda_model_discovery_test.rs  cuda_simple_test.rs  cuda_text_generation_test.rs  full_pipeline_test.rs  integration_basic.rs  integration_inference_test.rs  minimal_hello_world.rs  real_burn_inference.rs  real_inference_tests.rs  real_inference_tests.rs.disabled  test_burn_engine_weights.rs  test_custom_rope_bf16.rs  test_direct_weight_loading.rs  test_f16_memory_optimization.rs  test_fixed_memory_overhead.rs  test_gpu_memory_validation.rs  test_llama31_engine_loading.rs  test_llama31_full_pipeline.rs  test_llama31_gpu_diagnostics.rs  test_llama31_gpu_inference.rs  test_llama31_memory_investigation.rs  test_llama31_pipeline_validation.rs  test_llama31_sharded_loading.rs
crates/inferno-llama/: Cargo.toml
crates/inferno-llama/examples/: test_real_models.rs
crates/inferno-llama/src/: attention.rs  config.rs  error.rs  factory.rs  feed_forward.rs  lib.rs  loader.rs  model.rs  normalization.rs  precision.rs  rope.rs  simple_loader.rs  tokenizer.rs  transformer_block.rs
crates/inferno-llama/tests/: debug_quantized_model.rs  simple_loading_test.rs  test_config_parsing.rs  test_end_to_end_loading.rs  test_factory_detection.rs  test_integration_progress.rs  test_model_loading_e2e_coverage.rs  test_model_variant_detection.rs  test_quantization_metadata.rs  test_real_inference.rs  test_real_model_integration.rs  test_safetensors_loading.rs  test_ultimate_success.rs  test_unified_model_factory.rs  test_weight_analyzer.rs  test_weight_loading.rs  test_weight_name_mapping.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: cli_options.rs  config.rs  lib.rs  main.rs  peer_manager.rs  registration.rs  server.rs
crates/proxy/tests/: config_tests.rs  error_tests.rs  integration_tests.rs  metrics_tests.rs  performance_tests.rs  server_tests.rs  service_tests.rs
crates/shared/: Cargo.toml  coverage.txt
crates/shared/benches/: consensus_benchmarks.rs  http3_benchmarks.rs  swim_benchmarks.rs  update_benchmarks.rs  validation_benchmarks.rs
crates/shared/src/: cli.rs  error.rs  gpu_diagnostics.rs  inference_utils.rs  lib.rs  metrics.rs  metrics_server.rs  model_memory_validator.rs  operations_server.rs  paths.rs  service_discovery.rs  service_discovery_old.rs  test_utils.rs
crates/shared/tests/: cli_tests.rs  error_tests.rs  http3_integration.rs  metrics_tests.rs
crates/vllm-backend/: Cargo.toml  build.rs
crates/vllm-backend/cpp/: CMakeLists.txt
crates/vllm-backend/src/: config.rs  error.rs  health.rs  lib.rs  server.rs  service.rs
crates/vllm-backend/tests/: inference_hello_world.rs  integration_basic.rs  llama_inference_tests.rs  real_inference_tests.rs
test-suite/: Cargo.toml
tests/: Cargo.toml  README.md  e2e_tests.rs  integration.rs  integration_tests.rs  module_tests.rs  unit_tests.rs
tests/e2e_tests/: proxy_backend_e2e.rs
tests/integration/: proxy_integration.rs
tests/module_tests/: proxy_module.rs
tests/src/: lib.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/e2e/: backend_proxy_registration_e2e.rs  backend_standalone_e2e.rs  proxy_standalone_e2e.rs  service_discovery_e2e.rs  service_discovery_full_e2e.rs
testsuite/tests/integration/: peer_manager_integration.rs  proxy_integration.rs  service_discovery_integration.rs
(+935 files in other folders)
