[workspace]
members = [
    "crates/shared",
    "crates/proxy",
    "crates/backend",
    "crates/governator",
    "crates/cli",
    "benchmarking",
    "testsuite",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Inferno Team <team@example.com>"]
license = "Apache-2.0"
repository = "https://github.com/0o-de-lally/inferno"

[workspace.dependencies]
# Shared dependencies across crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive", "env"] }
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Pingora dependencies for proxy
pingora-core = "0.6"
pingora-proxy = "0.6"
pingora-http = "0.6"

# Development dependencies
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.4"
wiremock = "0.5"
serial_test = "3.0"
reqwest = { version = "0.12.23", features = ["json", "blocking", "multipart"] }
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"

# HTTP/3 dependencies
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = "0.11"
rustls = { version = "0.23", features = ["std"] }
rustls-pki-types = "1.12"
rcgen = "0.13"
webpki-roots = "0.26"

# Coverage dependencies
cargo-llvm-cov = "0.6"

# Backend-specific dependencies
sqlx = { version = "0.6", features = ["postgres", "chrono", "runtime-tokio-native-tls"] }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
debug = false
opt-level = 3
lto = "fat"

[profile.bench]
codegen-units = 1
strip = true
debug = false
opt-level = 3
lto = "fat"
