[package]
name = "inferno-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Performance benchmarks for Inferno distributed systems"
publish = false

[dependencies]
inferno-proxy = { workspace = true }
inferno-shared = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "metrics"
harness = false

[[bench]]
name = "config"
harness = false

[[bench]]
name = "error"
harness = false

[[bench]]
name = "proxy_service"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "scalability"
harness = false

[[bench]]
name = "service_discovery"
harness = false