[package]
name = "inferno-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Test suite for Inferno distributed systems"
publish = false

[dependencies]
inferno-proxy = { path = "../crates/proxy" }
# inferno-backend = { path = "../crates/backend" }
inferno-shared = { path = "../crates/shared" }

tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
wiremock = { workspace = true }
serial_test = { workspace = true }
proptest = { workspace = true }
tokio-test = { workspace = true }
libc = "0.2"

[[test]]
name = "integration"
path = "integration.rs"

[[test]]
name = "module_tests"
path = "module_tests.rs"

[[test]]
name = "e2e_tests"
path = "e2e_tests.rs"
