[package]
name = "inferno-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI inference backend component of Inferno distributed systems"

[dependencies]
inferno-shared = { path = "../shared" }
inferno-inference = { path = "../inference" }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }


[[bin]]
name = "inferno-backend"
path = "src/main.rs"