[package]
name = "inferno-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI inference backend component of Inferno distributed systems"

[dependencies]
inferno-shared = { workspace = true }
inferno-inference = { workspace = true, optional = true }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
hyper-v1 = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }

[features]
default = ["candle-cuda", "pretrained"]

# Inference engine features
burn-cpu = ["dep:inferno-inference", "inferno-inference/burn-cpu"]
candle-cpu = ["dep:inferno-inference", "inferno-inference/candle-cpu"]
candle-cuda = ["dep:inferno-inference", "inferno-inference/candle-cuda"]
candle-metal = ["dep:inferno-inference", "inferno-inference/candle-metal"]
pretrained = ["dep:inferno-inference", "inferno-inference/pretrained"]

[[bin]]
name = "inferno-backend"
path = "src/main.rs"