[package]
name = "inferno-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified command-line interface for Inferno distributed systems"

[dependencies]
inferno-shared = { path = "../shared" }
inferno-proxy = { path = "../proxy" }
inferno-backend = { path = "../backend" }
inferno-governator = { path = "../governator" }

# Core dependencies
tokio = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

# Download functionality dependencies
anyhow = { workspace = true }
git2 = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures-util = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
hf-hub = { workspace = true, features = ["tokio"] }

# Doctor command dependencies
sysinfo = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }

# Play mode dependencies
rustyline = { workspace = true }
inferno-inference = { path = "../inference" }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }


[[bin]]
name = "inferno"
path = "src/main.rs"