[package]
name = "inferno"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified command-line interface for Inferno distributed systems"

[dependencies]
inferno-shared = { path = "../shared" }
inferno-proxy = { path = "../proxy" }
inferno-backend = { path = "../backend" }
inferno-governator = { path = "../governator" }

# Core dependencies
tokio = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

# Download functionality dependencies
anyhow = "1.0"
git2 = "0.19"
reqwest = { workspace = true, features = ["stream"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
hf-hub = { workspace = true, features = ["tokio"] }

# Doctor command dependencies
sysinfo = "0.30"
regex = "1.10"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
walkdir = "2.4"

# Play mode dependencies
rustyline = "14.0"
inferno-inference = { path = "../inference" }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8"

[features]
default = ["candle-cuda", "pretrained"]

# Pass-through features to backend
burn-cpu = ["inferno-backend/burn-cpu"]
candle-cpu = ["inferno-backend/candle-cpu"]
candle-cuda = ["inferno-backend/candle-cuda"]
candle-metal = ["inferno-backend/candle-metal"]
pretrained = ["inferno-backend/pretrained"]

[[bin]]
name = "inferno"
path = "src/main.rs"
