[package]
name = "inferno"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified command-line interface for Inferno distributed systems"

[dependencies]
inferno-shared = { workspace = true }
inferno-proxy = { workspace = true }
inferno-backend = { workspace = true }
inferno-governator = { workspace = true }

# Core dependencies
tokio = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

# Download functionality dependencies
anyhow = { workspace = true }
git2 = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
hf-hub = { workspace = true }

# Doctor command dependencies
sysinfo = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }

# Play mode dependencies
rustyline = { workspace = true }
inferno-inference = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["candle-cuda", "pretrained"]

# Pass-through features to backend
burn-cpu = ["inferno-backend/burn-cpu"]
candle-cpu = ["inferno-backend/candle-cpu"]
candle-cuda = ["inferno-backend/candle-cuda"]
candle-metal = ["inferno-backend/candle-metal"]
pretrained = ["inferno-backend/pretrained"]

[[bin]]
name = "inferno"
path = "src/main.rs"
