[package]
name = "cuda-profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cudarc = { version = "0.11", features = ["cuda-12-0"] }
thiserror = "1.0"

# For statistical analysis

# For system monitoring

[dev-dependencies]
tempfile = "3.8"
approx = "0.5"

[features]
default = []
nsight-integration = []
advanced-profiling = []