[package]
name = "inferno-governator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cost optimization and resource governance component of Inferno distributed systems"

[dependencies]
inferno-shared = { path = "../shared" }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }

[[bin]]
name = "inferno-governator"
path = "src/main.rs"