[package]
name = "inferno-governator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cost optimization and resource governance component of Inferno distributed systems"

[dependencies]
inferno-shared = { workspace = true }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }

[[bin]]
name = "inferno-governator"
path = "src/main.rs"