[package]
name = "inferno-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inference engine implementation for Inferno with Burn ML framework support"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# Local dependencies
inferno-shared = { workspace = true }

# Configuration and environment
config = { workspace = true }
toml = { workspace = true }
num_cpus = { workspace = true }

# JSON and validation
validator = { workspace = true }

# Process execution is handled by std::process (no additional crate needed)

# Burn ML Framework for real model inference
burn = { workspace = true, optional = true }
burn-import = { workspace = true, optional = true }
llama-burn = { workspace = true, optional = true }

# Candle ML Framework for optimized inference (with CUDA 13.0 support)
candle-core = { git = "https://github.com/huggingface/candle", optional = true, default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle", optional = true, default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle", optional = true, default-features = false }

# Shared dependencies for both frameworks
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
bytemuck = { version = "1.0", optional = true }
half = { version = "2.3", optional = true }


[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }

[features]
default = ["candle-cpu", "pretrained"]
pretrained = []

# Burn ML Framework features
burn-cpu = [
    "burn/ndarray",
    "burn/autodiff",
    "dep:tokenizers",
    "hf-hub/tokio",
    "dep:safetensors",
    "dep:burn-import",
    "dep:llama-burn"
]  # Real deterministic Llama model inference with SafeTensors support (default)

# Candle ML Framework features
candle-cpu = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "hf-hub/tokio",
    "dep:safetensors",
    "dep:bytemuck",
    "dep:half"
]  # HuggingFace-compatible inference with Candle framework

candle-cuda = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "hf-hub/tokio",
    "dep:safetensors",
    "dep:bytemuck",
    "dep:half",
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda"
]  # CUDA-accelerated inference with optimized kernels

candle-metal = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "hf-hub/tokio",
    "dep:safetensors",
    "dep:bytemuck",
    "dep:half",
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal"
]  # Metal-accelerated inference for Apple Silicon

# Benchmarks will be added in later phases
# [[bench]]
# name = "latency"
# harness = false

# [[bench]]
# name = "throughput"
# harness = false
