[package]
name = "inferno-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inference engine implementation for Inferno with Burn ML framework support"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

# Local dependencies
inferno-shared = { workspace = true }

# Configuration and environment
config = { workspace = true }
toml = { workspace = true }
num_cpus = { workspace = true }

# JSON and validation
validator = { workspace = true }

# Process execution is handled by std::process (no additional crate needed)

# ML Framework dependencies - Always enabled for simplicity
# (removing feature complexity as requested)

# Candle ML Framework for optimized inference (with CUDA 13.0 support)
candle-core = { git = "https://github.com/huggingface/candle", optional = true, default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle", optional = true, default-features = false }
candle-transformers = { git = "https://github.com/huggingface/candle", optional = true, default-features = false }

# Shared dependencies for ML frameworks
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
half = { workspace = true, optional = true }

# Burn ML Framework - commented out due to upstream compilation issues
# burn = { workspace = true }
# burn-import = { workspace = true }
# llama-burn = { workspace = true }


[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }

[features]
default = ["candle-cpu", "pretrained"]
pretrained = []

# Burn ML Framework features (currently disabled due to compilation issues)
# burn-cpu = [
#     "burn/ndarray",
#     "burn/autodiff",
#     "dep:tokenizers",
#     "hf-hub/tokio",
#     "dep:safetensors",
#     "dep:burn-import",
#     "dep:llama-burn"
# ]
# For now, burn-cpu is a stub that enables candle-cpu instead
burn-cpu = ["candle-cpu"]

# Candle ML Framework features
candle-cpu = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "hf-hub/tokio",
    "dep:safetensors",
    "dep:bytemuck",
    "dep:half"
]

candle-cuda = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "hf-hub/tokio",
    "dep:safetensors",
    "dep:bytemuck",
    "dep:half",
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda"
]

candle-metal = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "hf-hub/tokio",
    "dep:safetensors",
    "dep:bytemuck",
    "dep:half",
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal"
]

# Benchmarks will be added in later phases
# [[bench]]
# name = "latency"
# harness = false

# [[bench]]
# name = "throughput"
# harness = false
