[package]
name = "inferno-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities, types, and protocols for Inferno distributed systems"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
wiremock = { workspace = true }
futures = "0.3"