[package]
name = "inferno-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities, types, and protocols for Inferno distributed systems"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
hyper = { workspace = true }
http = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
fastrand = "2.0"
# SWIM protocol dependencies
bincode = "1.3"
zstd = "0.13"
rand = "0.8"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
wiremock = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"

[[bench]]
name = "update_benchmarks"
harness = false

[[bench]]
name = "swim_benchmarks"
harness = false
