[package]
name = "inferno-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities, types, and protocols for Inferno distributed systems"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
fastrand = { workspace = true }
# SWIM protocol dependencies
bincode = { workspace = true }
zstd = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
wiremock = { workspace = true }
criterion = { workspace = true }
futures = { workspace = true }

[[bench]]
name = "update_benchmarks"
harness = false

[[bench]]
name = "swim_benchmarks"
harness = false
